[package]
name = "ring-signatures"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = "0.3.0"
ark-ff = "0.3.0"
ark-ec = "0.3.0"
ark-ed-on-bn254 = "0.3.0"
sha2 = "0.10.2"
rand = { version = "0.8", features = [ "std", "std_rng" ] }
lazy_static = "1.4.0"
